compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__guard_1.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 767
expression: "\npub fn main(x, y) {\n  case x {\n    True if y -> 1\n    False -> 2\n  }\n}\n"
---
error: Inexhaustive patterns
  ┌─ /src/one/two.rakun:3:3
  │  
3 │ ╭   case x {
4 │ │     True if y -> 1
5 │ │     False -> 2
6 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    True
