compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__inexhaustive_multi_pattern.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 1211
expression: "\nlet a = Ok(1)\nlet b = True\ncase a, b {\n  Error(_), _ -> Nil\n}\n"
---
----- SOURCE CODE

let a = Ok(1)
let b = True
case a, b {
  Error(_), _ -> Nil
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.rakun:4:1
  │  
4 │ ╭ case a, b {
5 │ │   Error(_), _ -> Nil
6 │ │ }
  │ ╰─^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Ok(_), _
