compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__inexhaustive_multi_pattern3.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "\nlet a = Ok(1)\nlet b = True\ncase a, b {\n  _, False -> Nil\n}\n"
---
error: Inexhaustive patterns
  ┌─ /src/one/two.rakun:4:1
  │  
4 │ ╭ case a, b {
5 │ │   _, False -> Nil
6 │ │ }
  │ ╰─^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    _, True
