compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__int_1.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 513
expression: "\npub fn main(x) {\n  case x {\n    0 -> 1\n    1 -> 1\n    2 -> 1\n  }\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    0 -> 1
    1 -> 1
    2 -> 1
  }
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.rakun:3:3
  │  
3 │ ╭   case x {
4 │ │     0 -> 1
5 │ │     1 -> 1
6 │ │     2 -> 1
7 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    _
