compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__label_1.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 738
expression: "\npub record Thing {\n  Thing(a: Bool, b: Bool)\n}\n\npub fn main(x) {\n  case x {\n    Thing(a: False, b: True) -> 1\n    Thing(b: False, a: True) -> 1\n  }\n}\n"
---
----- SOURCE CODE

pub record Thing {
  Thing(a: Bool, b: Bool)
}

pub fn main(x) {
  case x {
    Thing(a: False, b: True) -> 1
    Thing(b: False, a: True) -> 1
  }
}


----- ERROR
error: Inexhaustive patterns
   ┌─ /src/one/two.rakun:7:3
   │  
 7 │ ╭   case x {
 8 │ │     Thing(a: False, b: True) -> 1
 9 │ │     Thing(b: False, a: True) -> 1
10 │ │   }
   │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Thing(False, False)
    Thing(True, True)
